<resources>
    <string name="app_name">TicTacToe</string>

    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="vs">VS</string>
    <string name="VScomp">VS Computer</string>
    <string name="two">TwoPlayer</string>
    <string name="vsfriend">VS Friend</string>
    <string name="change">Update</string>
    <string name="leave">Leave Match?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="point">0</string>
    <string name="dash">-</string>>
    <string name="list">Online Local Players</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
