<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/ic_dialogback">

    <TextView
        android:id="@+id/leave"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_margin="22dp"
        android:fontFamily="@font/aladin"
        android:text="@string/leave"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/lyes"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:fontFamily="@font/aladin"
            android:text="@string/yes"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/lno"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="#fff"
            android:fontFamily="@font/aladin"
            android:text="@string/no"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>