<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rawatapps.tictactoe.SettingsActivity"
    android:background="@drawable/ic_backgroundgame">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/userimage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="#00000000"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_textviewback"
        android:fontFamily="@font/aladin"
        android:paddingTop="10sp"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/changename"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@drawable/pencilicon"
        android:onClick="changeuname" />
</LinearLayout>
    <TextView
        android:id="@+id/textView3"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/aclonica"
        android:text="WINS"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:text="@string/VScomp" />
    <TextView
        android:id="@+id/strcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
         />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="@string/two" />

        <TextView
            android:id="@+id/strtwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="82dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
            android:text="@string/vsfriend" />

        <TextView
            android:id="@+id/strfriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/alegreya_sans_sc_bold"
             />

    </LinearLayout>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/imageback"
        android:text="Back"
        android:onClick="back"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sound"
        android:textSize="25sp"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:layout_margin="10dp"
        android:id="@+id/switchs"
        />
     <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/levelback"
        android:fontFamily="@font/alegreya_sans_sc_bold"
        android:textOn="@string/yes"
        android:textOff="@string/no"
         android:id="@+id/sound"
        />
    </LinearLayout>
</LinearLayout>
</ScrollView>