<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_backgroundgame"
    android:id="@+id/rlt">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/singleplay"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@drawable/backgroundbutton"
            android:onClick="singleplayer"
            android:text="@string/VScomp" />

        <Button
            android:id="@+id/twoplay"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/backgroundbutton"
            android:onClick="twoplayer"
            android:text="@string/two" />

        <Button
            android:id="@+id/local"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/backgroundbutton"
            android:onClick="locally"
            android:text="@string/vsfriend" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ll"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/ic_stat"/>

    <ImageButton
        android:id="@+id/exit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ll"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/ic_exit"
        android:layout_marginEnd="10dp"
        android:onClick="exit"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/tictactoeimg" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        />

</RelativeLayout>