<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoPlayer"
    android:background="@drawable/ic_backgroundgame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/linearone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/player1ico"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/player1"
            android:layout_height="73dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/ic_smile"

            />

        <TextView
            android:id="@+id/win1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/point"
            android:textColor="#FF9800"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/aclonica"
            android:gravity="center_horizontal"
            android:text="@string/dash"
            android:textColor="#FF9800"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/win2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/point"
            android:textColor="#FF9800"
            android:textSize="50sp"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/player2ico"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="73dp"
            android:contentDescription="@string/player2"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:baselineAligned="false"
            app:srcCompat="@drawable/ic_savage" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/linearone">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/firstplayer"
            android:textAlignment="viewStart"
            android:fontFamily="@font/aclonica"
            android:textSize="22sp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/secplayer"
            android:textSize="22sp"
            android:fontFamily="@font/aclonica"
            android:textAlignment="viewEnd"
            android:layout_gravity="end"
            android:gravity="end"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:gravity="center_horizontal|center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:background="@drawable/ic_back">


        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/a11"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/a12"
                android:layout_width="60dp"
                android:layout_marginStart="32dp"
                android:layout_height="60dp"
                android:background="#00000000" />

            <ImageButton
                android:id="@+id/a13"
                android:layout_width="60dp"
                android:layout_marginStart="28dp"
                android:layout_height="60dp"
                android:background="#00000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="-10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/a21"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/a22"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/a23"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="23dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/a31"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/a32"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="32dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/a33"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:adjustViewBounds="true"
                android:background="#00000000"
                android:scaleType="fitCenter" />
        </LinearLayout>
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/twoadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        />
</RelativeLayout>